--- a/apiB/package.json
+++ b/apiB/package.json
@@ -8,5 +8,9 @@
   },
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16",
+    "sucrase": "^3.21.0"
   }
 }
