--- a/api-a/package.json
+++ b/api-a/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
-    "start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts"
-  },
+    "start": "ts-node src/server.ts",  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/axios": "^0.14.0",
-    "@types/express": "^4.17.13",
     "axios": "^0.26.1",
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   }
 }
