--- a/api-a/package.json
+++ b/api-a/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
-    "start": "ts-node src/server.ts",  },
+    "start": "ts-node src/server.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
