--- a/api-b/package.json
+++ b/api-b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apiB",
+  "name": "api-b",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -9,6 +9,7 @@
     "start": "node ./src/server.js"
   },
   "dependencies": {
+    "amqplib": "^0.10.0",
     "express": "^4.18.1"
   },
   "devDependencies": {
