--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,42 +1,46 @@
 version: "3.8"
 
 services:
-  # rabbitmq:
-  #   image: rabbitmq:3-management-alpine
-  #   container_name: 'rabbitmq'
-  #   ports:
-  #       - 5672:5672
-  #       - 15672:15672
-  #   volumes:
-  #       - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
-  #       - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
-  #   networks:
-  #       - rabbitmq_net
-
-  api-a:
-    build:
-      context: "./api-a"
-      dockerfile: Dockerfile
-    restart: always
-    volumes:
-      - ./api-a:/home/node/app
+  rabbitmq:
+    image: "rabbitmq:3.8-management-alpine"
+    container_name: rabbitmq
+    hostname: rabbitmq
     ports:
-      - 3000:3000
-    networks:
-        - rabbitmq_net
+      - "15672:15672"
+      - "5672:5672"
+    volumes:
+      - "./.rabbitmq_data:/var/lib/rabbitmq/"
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=admin
 
   api-b:
     build:
       context: "./api-b"
       dockerfile: Dockerfile
     restart: always
+    container_name: api-b
+    links:
+      - rabbitmq
     volumes:
       - ./api-b:/home/node/app
     ports:
       - 3001:3001
-    networks:
-        - rabbitmq_net
+    depends_on:
+      - rabbitmq
 
-networks:
-  rabbitmq_net:
-    driver: bridge
+  api-a:
+    build:
+      context: "./api-a"
+      dockerfile: Dockerfile
+    restart: always
+    container_name: api-a
+    links:
+      - rabbitmq
+    volumes:
+      - ./api-a:/home/node/app
+    ports:
+      - 3000:3000
+    depends_on:
+      - rabbitmq
+      - api-b
